dataset1235/2025-2/2868285114/users/1072499734/executions/4269873056_3198308593.log
== SUBMISSION (2025-08-26 22:43:42)
-- CODE: 
raio = float(input())
import math
pi = math.pi
volume = (4 / 3) * pi * raio**3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:43:56)
-- CODE: 
raio = float(input())
import math
pi = math.pi
volume = (4 / 3) * pi * raio**3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:42:52)
-- CODE: 
raio = float(input()
import math
volume = (4 / 3) * pi * raio**3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:43:12)
-- CODE: 
raio = float(input())
import math
volume = (4 / 3) * pi * raio**3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume = (4 / 3) * pi * raio**3  
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume = (4 / 3) * pi * raio**3  
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume = (4 / 3) * pi * raio**3  
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume = (4 / 3) * pi * raio**3  
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume = (4 / 3) * pi * raio**3  
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume = (4 / 3) * pi * raio**3  
                       ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:43:13)
-- CODE: 
raio = float(input())
import math
volume = (4 / 3) * pi * raio**3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume = (4 / 3) * pi * raio**3  
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume = (4 / 3) * pi * raio**3  
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume = (4 / 3) * pi * raio**3  
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume = (4 / 3) * pi * raio**3  
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume = (4 / 3) * pi * raio**3  
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume = (4 / 3) * pi * raio**3  
                       ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:42:22)
-- CODE: 
raio = float(input()
import math
volume = 4 / 3 * pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:42:36)
-- CODE: 
raio = float(input()
import math
volume = 4 / 3 * pi * raio**3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:43:37)
-- CODE: 
raio = float(input())
import math
pi = math.pi
volume = (4 / 3) * pi * raio**3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:42:38)
-- CODE: 
raio = float(input()
import math
volume = 4 / 3 * pi * raio**3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:42:53)
-- CODE: 
raio = float(input()
import math
volume = (4 / 3) * pi * raio**3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = float(input()
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
